# card-api

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  Caddyfile  Dockerfile  INSTALL.md  Makefile  README.md  codemeta.json  compose.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: cle-de-priorite.yml  config.yml
data/: usage.jsonl
docs/dev/: API.md  CHANTIERS.md  PLAN_FAIR.md  THEME_DOCS.md
examples/: .env.example  carte_tendance_QA.R  stations_rrse.txt
scripts/: build_theme.py  resolve_refs.py  set_version.py  theme-identity.css  veille_sante.py
src/card_api/: hubeau.py  jobs.py  keys.py  main.py  serialize.py  stats.py  usage.py
src/card_api/static/: swagger-theme.css
tests/: conftest.py  test_api.py  test_docs_theme.py  test_extract.py  test_jobs.py  test_keys.py  test_live_hubeau.py  test_makaho.py
tests/data/makaho/QA/: README.txt  dataEX.csv  metaEX.csv  trendEX.csv
tests/data/makaho/QSA_DJF/: README.txt  dataEX.csv  metaEX.csv  trendEX.csv
tests/data/makaho/dtLF/: README.txt  dataEX.csv  metaEX.csv  trendEX.csv
tests/data/makaho/tQJXA/: README.txt  dataEX.csv  meta.csv  metaEX.csv  trendEX.csv
